# Video_Search_Finder

./: .gitignore  README.md
.github/workflows/: release.yml
core_src/: CMakeLists.txt  create_stress_test.sh  main.cpp
core_src/src/: cache.hpp  collector.hpp  decoder.hpp  scanner.hpp  types.hpp
gui/: package-lock.json  package.json
gui/src/: App.css  App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  lib.txt  main.rs
